update color contrast fix for mobile view

--- a/chamber/styles/larger.css
+++ b/chamber/styles/larger.css
@@ -37,6 +37,7 @@
 
     .navigation ul li a {
         font-size: 1rem;
+        color: var(--primary-color-contrast);
     }
 
     .navigation a:hover {
